--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Aitor Roma
-email: aitor@aitorroma.com
+email: aitor@nimbox360.com
 description: Página personal de Aitor Roma
 baseurl: ""
 url: "https://aitorroma.com"
